k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hybrid-demo
  labels:
    app: hybrid-demo
spec:
  selector:
    app: hybrid-demo
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  type: ClusterIP
