k8s/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hybrid-demo
  labels:
    app: hybrid-demo
spec:
  to:
    kind: Service
    name: hybrid-demo
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
